# Gatekeeper

./: .env  .env.example  .gitignore  CHANGES.md  Editor _ Mermaid Chart-2025-06-25-090249.mmd  GatekeeperGUI.py  Makefile  README.md  a.py  a.txt  algo_Gatekeeper.md  algo_gatekeepr.md  anomalies.py  build_windows.bat  certificateur-gui.py  certificateur-gui.spec  certificateur.desktop  certificateur_gui.spec  cli.py  column_mapping.py  deployment_setup.py  dev_watcher.py  directions_conservees.csv  directions_conservees.py  ext_utils.py  generate_testfiles.py  gui.py  hook-gatekeeper.py  init_gatekeeper_repo.sh  install_windows.ps1  launch_gui.bat  launch_gui.sh  main.py  manual_review.py  mapping_profiles.csv  mapping_services.csv  mermaid-ai-diagram-2025-06-25-092121.mmd  new_gui.py  prebuild.sh  profils_valides.csv  (+19 more)
config/: __init__.py  column_aliases.yml  constants.py  default.yaml  init.py  params.yml  profile_aliases.yml
core/: anomalies.py  ext_utils.py  manual_review.py  match_utils.py  report.py  rh_utils.py  text_utils.py
data/: directions_conservees.csv  ext_generated.xlsx  ext_reference.xlsx  ext_second_extraction.xlsx  ext_test.xlsx  profils_valides.csv  rapport.xlsx  rapport_certification_20250617_102231.xlsx  reference_RH_test.xlsx  review.xlsx  rh_in.xlsx  rh_out.xlsx  rh_reference_1.xlsx  rh_reference_2.xlsx  template.xlsx  test_extraction_gatekeeper_v2.xlsx  test_rh_in.xlsx  test_rh_out.xlsx  variations_directions.csv  variations_profils.csv
docs/: algo_gatekeepr.md
gatekeeper/: aggregator.py  classifier.py  cleaner.py  config.py  injector.py  (+10 more)
(+53 files in other folders)
