[tool.poetry]
name = "gatekeeper"
version = "0.1.0"
description = "Revue périodique des comptes utilisateurs"
authors = ["Ornel Whannou <user@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5"
openpyxl = "*"
pandera = "*"
click = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
black = "*"
pre-commit = "*"
